WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59968
Text does not split on white space when typing to the edge of window
https://bugs.webkit.org/show_bug.cgi?id=59968
Summary
Text does not split on white space when typing to the edge of window
Enrica Casucci
Reported
2011-05-02 15:24:29 PDT
Repro steps 1. Open the attached test case in Safari. 2. Place the cursor at the end of the text, after the word "you". 3. Type a blank character, then the word "have". Expected After typing the blank character the cursor should move to the very end of the line and after typing "have" you should see the word "you" at the end of the first line and the word "have" at the beginning of the second line. Actual The word "youhave" (no blanks) is displayed at the beginning of the second line. Note: this test is platform specific, since it involves testing the condition where the blank character doesn't fit in the previous line by only a fraction of pixel, but the bug occurs on every platform.
Attachments
Patch
(8.80 KB, patch)
2011-05-02 15:34 PDT
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
RTL testcase
(774 bytes, text/html)
2011-05-07 15:06 PDT
,
Yair Yogev
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-05-02 15:34:19 PDT
Created
attachment 91993
[details]
Patch
Enrica Casucci
Comment 2
2011-05-02 15:46:43 PDT
http://trac.webkit.org/changeset/85535
Ryosuke Niwa
Comment 3
2011-05-02 15:54:26 PDT
***
Bug 57745
has been marked as a duplicate of this bug. ***
Yair Yogev
Comment 4
2011-05-07 15:06:28 PDT
Created
attachment 92697
[details]
RTL testcase looks like the fix here was only good for LTR text? see RTL testcase attached
Yair Yogev
Comment 5
2011-05-16 07:54:43 PDT
Comment on
attachment 92697
[details]
RTL testcase posted as
bug 60884
Ryosuke Niwa
Comment 6
2011-06-11 13:25:20 PDT
It seems like the test added by this test only works on Mac due to font metrics difference. Can we move the test to platform/mac or modify it so that it works on all platforms?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug